bug 281298 replace nsIPref with nsIPrefService/nsIPrefBranch in widget patch by Vidar Braut Haarr <vhaarr+bmo@gmail.com> r=bryner sr=bz