widget/src/gtk/nsGtkIMEHelper.cpp
@@ -44,7 +44,8 @@
 #include "nsIPlatformCharset.h"
 #include "nsICharsetConverterManager.h"
 #include "nsIServiceManager.h"
-#include "nsIPref.h"
+#include "nsIPrefBranch.h"
+#include "nsIPrefService.h"
 #include <X11/Xatom.h>
 #include "nsCRT.h"
 
@@ -53,7 +54,6 @@
 static NS_DEFINE_CID(kCharsetConverterManagerCID, NS_ICHARSETCONVERTERMANAGER_CID);
 
 #ifdef USE_XIM
-static NS_DEFINE_CID(kPrefServiceCID, NS_PREF_CID);
 
 nsIMEStatus *nsIMEGtkIC::gStatus = 0;
 nsWindow *nsIMEGtkIC::gGlobalFocusWindow = 0;
@@ -1221,11 +1221,11 @@ nsIMEGtkIC::GetInputStyle() {
   return ret_style;
 #endif
 
-  nsCOMPtr<nsIPref> prefs(do_GetService(kPrefServiceCID, &rv));
+  nsCOMPtr<nsIPrefBranch> prefs(do_GetService(NS_PREFSERVICE_CONTRACTID, &rv));
   if (NS_SUCCEEDED(rv) && (prefs)) {
-    char *input_style;
-    rv = prefs->CopyCharPref(PREF_XIM_INPUTSTYLE, &input_style);
-    if (NS_SUCCEEDED(rv) && input_style[0]) {
+    nsXPIDLCString input_style;
+    rv = prefs->GetCharPref(PREF_XIM_INPUTSTYLE, getter_Copies(input_style));
+    if (NS_SUCCEEDED(rv) && !input_style.IsEmpty()) {
       if (!nsCRT::strcmp(input_style, VAL_INPUTSTYLE_ONTHESPOT)) {
         preferred_preedit_style = (GdkIMStyle) GDK_IM_PREEDIT_CALLBACKS;
         preferred_status_style = (GdkIMStyle) GDK_IM_STATUS_CALLBACKS;
@@ -1239,13 +1239,12 @@ nsIMEGtkIC::GetInputStyle() {
         preferred_preedit_style = (GdkIMStyle) GDK_IM_PREEDIT_NONE;
         preferred_status_style = (GdkIMStyle) GDK_IM_STATUS_NONE;
       }
-      nsCRT::free(input_style);
     }
     /* if PREF_XIM_PREEDIT and PREF_XIM_STATUS are defined, use
        those values */
-    char *preeditstyle_type;
-    rv = prefs->CopyCharPref(PREF_XIM_PREEDIT, &preeditstyle_type);
-    if (NS_SUCCEEDED(rv) && preeditstyle_type[0]) {
+    nsXPIDLCString preeditstyle_type;
+    rv = prefs->GetCharPref(PREF_XIM_PREEDIT, getter_Copies(preeditstyle_type));
+    if (NS_SUCCEEDED(rv) && !preeditstyle_type.IsEmpty()) {
       if (!nsCRT::strcmp(preeditstyle_type, VAL_PREEDIT_CALLBACKS)) {
         ivalue = GDK_IM_PREEDIT_CALLBACKS;
       } else if (!nsCRT::strcmp(preeditstyle_type, VAL_PREEDIT_POSITION)) {
@@ -1260,11 +1259,10 @@ nsIMEGtkIC::GetInputStyle() {
       if (ivalue) {
         preferred_preedit_style = (GdkIMStyle) ivalue;
       }
-      nsCRT::free(preeditstyle_type);
     }
-    char *statusstyle_type;
-    rv = prefs->CopyCharPref(PREF_XIM_STATUS, &statusstyle_type);
-    if (NS_SUCCEEDED(rv) && statusstyle_type[0]) {
+    nsXPIDLCString statusstyle_type;
+    rv = prefs->GetCharPref(PREF_XIM_STATUS, getter_Copies(statusstyle_type));
+    if (NS_SUCCEEDED(rv) && !statusstyle_type.IsEmpty()) {
       if (!nsCRT::strcmp(statusstyle_type, VAL_STATUS_CALLBACKS)) {
         ivalue = GDK_IM_STATUS_CALLBACKS;
       } else if (!nsCRT::strcmp(statusstyle_type, VAL_STATUS_NOTHING)) {
@@ -1277,7 +1275,6 @@ nsIMEGtkIC::GetInputStyle() {
       if (ivalue) {
         preferred_status_style = (GdkIMStyle) ivalue;
       }
-      nsCRT::free(statusstyle_type);
     }
   }
   style = gdk_im_decide_style((GdkIMStyle)(preferred_preedit_style | preferred_status_style));
