widget/src/mac/nsToolkitBase.cpp
@@ -57,7 +57,10 @@
 #include "nsIEventQueueService.h"
 #include "nsIObserverService.h"
 #include "nsIServiceManager.h"
-#include "nsIPref.h"
+#include "nsIPrefBranch2.h"
+#include "nsIPrefBranch.h"
+#include "nsIPrefService.h"
+#include "nsIObserver.h"
 
 
 static io_connect_t gRootPort = nsnull;
@@ -86,7 +89,7 @@ nsToolkitBase::~nsToolkitBase()
   PR_SetThreadPrivate(gToolkitTLSIndex, nsnull);
 }
 
-NS_IMPL_THREADSAFE_ISUPPORTS1(nsToolkitBase, nsIToolkit);
+NS_IMPL_THREADSAFE_ISUPPORTS2(nsToolkitBase, nsIToolkit, nsIObserver);
 
 NS_IMETHODIMP
 nsToolkitBase::Init(PRThread * aThread)
@@ -101,21 +104,21 @@ nsToolkitBase::Init(PRThread * aThread)
   RegisterForSleepWakeNotifcations();
   SetupQuartzRendering();
 
-  nsCOMPtr<nsIPref> prefs = do_GetService(NS_PREF_CONTRACTID);
+  nsCOMPtr<nsIPrefBranch2> prefs = do_GetService(NS_PREFSERVICE_CONTRACTID);
   if (prefs) {
-    prefs->RegisterCallback(kQuartzRenderingPref, QuartzChangedCallback, nsnull);  
-    prefs->RegisterCallback(kAllFontSizesPref, QuartzChangedCallback, nsnull);
+    prefs->AddObserver(kQuartzRenderingPref, this, PR_FALSE);  
+    prefs->AddObserver(kAllFontSizesPref, this, PR_FALSE);
   }
   return NS_OK;
 }
 
-
-//
-// QuartzChangedCallback
 //
 // The pref changed, reset the app to use quartz rendering as dictated by the pref
 //
-int nsToolkitBase::QuartzChangedCallback(const char* pref, void* data)
+NS_IMETHODIMP
+nsToolkitBase::Observe(nsISupports*     aSubject,
+                       const char*      aTopic,
+                       const PRUnichar* aData)
 {
   SetupQuartzRendering();
   return NS_OK;
@@ -145,7 +148,7 @@ void nsToolkitBase::SetupQuartzRendering()
   // the pref isn't found, assume we want it on. That way, we have to explicitly put
   // in a pref to disable it, rather than force everyone who wants it to carry around
   // an extra pref.
-  nsCOMPtr<nsIPref> prefs = do_GetService(NS_PREF_CONTRACTID);
+  nsCOMPtr<nsIPrefBranch> prefs = do_GetService(NS_PREFSERVICE_CONTRACTID);
   if (!prefs)
     return;
 
